# fx

./: .aqua-checksums.json  .aqua.yaml  .flake8  .gitignore  .textlintrc.yaml  .todosignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  buf.yaml  codecov.yml  mkdocs.yml  mypy.ini  netlify.toml  package-lock.json  package.json  pyproject.toml  renovate.json5  requirements-dev.txt  requirements.txt
.github/workflows/: pre-submit.units.yml  pull_request.tests.yml  push.deploy.yml  schedule.deploy.yml  schedule.issue-reopener.yml  schedule.scorecard.yml  schedule.update.yml  workflow_call.actionlint.yml  workflow_call.buf-breaking.yml  workflow_call.buf.yml  workflow_call.checkmake.yml  workflow_call.commitlint.yml  workflow_call.fixme.yml  workflow_call.format-check.yml  workflow_call.formatting.yml  workflow_call.generated.yml  workflow_call.markdownlint.yml  workflow_call.mypy.yml  workflow_call.openapi-spec-validator.yml  workflow_call.renovate-config-validator.yml  workflow_call.ruff.yml  workflow_call.textlint.yml  workflow_call.unit-test.yml  workflow_call.unit-tests.yml  workflow_call.yamllint.yml  workflow_call.zizmor.yml  workflow_run.deploy.yml
_site/: 404.html  index.html
_site/currency/: AED.json  AFA.json  AMD.json  ANG.json  AOA.json  AOK.json  ARP.json  ARS.json  ATS.json  AYM.json  AZM.json  BAD.json  BBD.json  BEC.json  BGN.json  BHD.json  BIF.json  BND.json  BRB.json  BRC.json  BRN.json  BSD.json  BUK.json  BWP.json  BYB.json  BYR.json  CHF.json  CLF.json  CNY.json  CRC.json  CVE.json  CZK.json  DEM.json  DJF.json  DKK.json  ECS.json  EEK.json  ERN.json  ESB.json  ETB.json  (+91 more)
_site/search/: search_index.json
_site/v1/currency/: ADP.json  AFN.json  ALK.json  ALL.json  AON.json  AOR.json  ARA.json  AUD.json  AWG.json  AZN.json  BAM.json  BDT.json  BEF.json  BEL.json  BGL.json  BMD.json  BOB.json  BOP.json  BOV.json  BRE.json  BRL.json  BRR.json  BTN.json  BYN.json  BZD.json  CAD.json  CDF.json  CHC.json  CHE.json  CHW.json  CLP.json  COP.json  COU.json  CSD.json  CSK.json  CUC.json  CUP.json  CYP.json  DOP.json  DZD.json  (+119 more)
_site/v1/provider/: MUFG.csv  MUFG.json
data/: currencies.binpb
data/MUFG/AED/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  2019.binpb  2020.binpb  2021.binpb  2022.binpb  2023.binpb  2024.binpb  2025.binpb  2026.binpb
data/MUFG/AUD/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  2019.binpb  2020.binpb  2021.binpb  2022.binpb  2023.binpb  2024.binpb  2025.binpb  2026.binpb
data/MUFG/CAD/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  2019.binpb  2020.binpb  2021.binpb  2022.binpb  2023.binpb  2024.binpb  2025.binpb  2026.binpb
data/MUFG/CHF/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  2019.binpb  2020.binpb  2021.binpb  2022.binpb  2023.binpb  2024.binpb  2025.binpb  2026.binpb
data/MUFG/CNY/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  2019.binpb  2020.binpb  2021.binpb  2022.binpb  2023.binpb  2024.binpb  2025.binpb  2026.binpb
data/MUFG/CZK/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  2019.binpb  2020.binpb  2021.binpb  2022.binpb  2023.binpb  2024.binpb  2025.binpb  2026.binpb
data/MUFG/DKK/JPY/: 2012.binpb  2013.binpb  2014.binpb  2015.binpb  2016.binpb  2017.binpb  2018.binpb  (+8 more)
docs/: index.md
docs/v1/: 404.json  openapi.yaml
fx/: __init__.py  build.py  currency.proto  currency.py  currency_pb2.py  main.py  money.py  mufg.py  provider.proto  provider.py  provider_pb2.py  quote.proto  quote.py  quote_pb2.py  test_mufg.py  test_update.py  update.py  updater.py  utils.py
fx/v1/: currency.proto  currency_pb2.py  provider.proto  provider_pb2.py  quote.proto  quote_pb2.py
proto/fx/v1/: currency.proto  provider.proto  quote.proto
tests/: __init__.py  mock_provider.py  test_build.py  test_mufg.py  test_update.py
(+153199 files in other folders)
