# Copyright 2025 Ian Lewis
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "fx"
version = "1.0.0"
authors = [
  { name="Ian Lewis", email="ian@ianlewis.org" },
]
description = "A simple currency exchange rate API"
readme = "README.md"
# NOTE: this should be compatible with the `.python-version` file.
requires-python = ">=3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.scripts]
fx = "fx.main:main"

[project.urls]
Homepage = "https://fx.ianlewis.org/"
Issues = "https://github.com/ianlewis/fx/issues"

[build-system]
# TODO(github.com/ianlewis/repo-template-py/issues/14): Manage the setuptools version automatically.
requires = ["setuptools == 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["third_party*", "node_modules*"]

[tool.ruff]
extend-exclude = ["*_pb2.py", "third_party"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PT009", # pytest-unittest-assertion: allow unittest assertions
    "FIX", # Allow TODO comments. These are handled by todos/fixme.

    "D203", # incorrect-blank-line-before-class. Incompatible with D211
    "D212", # multi-line-summary-first-line. Incompatible with D213
]
